stylesheetを読み込む

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - ポートフォリオサイト</title>
     <meta name="description" content="個人ポートフォリオサイト" />
+    <script type="module" src="/src/main.tsx"></script>
+    <link rel="stylesheet" href="/src/stylesheet/index.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
