--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - ポートフォリオサイト</title>
     <meta name="description" content="個人ポートフォリオサイト" />
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js"></script>
     <script type="module" src="/src/main.tsx"></script>
     <link rel="stylesheet" href="/src/stylesheet/index.css" />
   </head>
